# coding_challenge

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: application.py  config.py  main.py  models.py  utils.py
app/clients/: base.py  bitbucket.py  github.py  types.py
tests/: .env  conftest.py  fake_providers.py  test_healthcheck.py  test_profiles.py
